test/stg/error/polyUnboxed.stg
id = FUN(x -> x);

-- should fail typechecking. Can't use unboxed arg in polymorphic FUN
main = THUNK(id 1);
